Add imports for card component and background pattern

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,10 @@
 // Base styles
 @use "./utilities/base";
+
+// ==== Components ====
+
+// Background pattern component
+@use "./components/pattern-background";
+
+// Order summary card component
+@use "./components/order-summary";
