--- a/src/scss/components/_order-summary.scss
+++ b/src/scss/components/_order-summary.scss
@@ -7,7 +7,7 @@
 
     width: 85%;
 
-    background-color: $very-pale-blue;
+    background-color: white;
     border-radius: 25px;
     overflow: hidden;
     box-shadow: 0 15px 16px rgba($bright-blue, 0.1);
