Add media to change background color on device width 375

--- a/src/scss/utilities/_base.scss
+++ b/src/scss/utilities/_base.scss
@@ -11,5 +11,9 @@
 }
 
 body {
-    background-color: $pale-blue;
+    background-color: white;
+
+    @media screen and (min-width: 375px) {
+        background-color: $pale-blue;
+    }
 }
